[gd_scene load_steps=2 format=3 uid="uid://teleport_ui_scene_001"]

[ext_resource type="Script" path="res://coop/scripts/teleport_ui.gd" id="1"]

[node name="TeleportUI" type="CanvasLayer"]
script = ExtResource("1")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="TitleLabel" type="Label" parent="Control/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Select Destination"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer1" type="Control" parent="Control/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 10)

[node name="DestinationsContainer" type="VBoxContainer" parent="Control/Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="VillageButton" type="Button" parent="Control/Panel/MarginContainer/VBoxContainer/DestinationsContainer"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(0, 60)
text = "Village"

[node name="AdventureButton" type="Button" parent="Control/Panel/MarginContainer/VBoxContainer/DestinationsContainer"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(0, 60)
text = "Adventure (Game Scene)"

[node name="Spacer2" type="Control" parent="Control/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 10)

[node name="CloseButton" type="Button" parent="Control/Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(0, 50)
text = "Cancel (ESC)"
